Remove client Leaf in favor of Entry
Replace the Leaf message with an nested Entry message in
ClientStateListResponse.  Additionally, rename `leaves` to `entries`.
Updates all tests and usages of the field.
